fixed layout problems

--- a/css/main.css
+++ b/css/main.css
@@ -184,12 +184,12 @@ body {
 }
 
 .tasks-add-btn {
-    align-self: flex-start;
     color: var(--clr-secondary);
     background: #fff;
     border: 4px solid;
-    margin-top: 2rem;
-    margin-left: 1.5rem;
+    position: relative;
+    left: 2rem;
+    top: 1rem;
     text-align: center;
     transition: 200ms;
 }
@@ -340,9 +340,9 @@ body {
 @media only screen and (min-width: 800px) {
 
     body {
-        min-height: 100vh;
+        height: 100vh;
         display: grid;
-        grid-template-columns: 12rem auto;
+        grid-template-columns: 12rem 1fr;
         grid-template-rows: 1fr 3fr;
     }
 
@@ -378,7 +378,7 @@ body {
         grid-column-start: 2;
         grid-column-end: 4;
         grid-row-start: 1;
-        grid-row-end: 2;
+        grid-row-end:2;
     }
 
     .logo img {
@@ -415,6 +415,7 @@ body {
         width: 8rem;
         height: 3rem;
         margin-left: 1.5em;
+        left: 0;
     }
 
     .btn-login {
@@ -432,8 +433,7 @@ body {
 @media only screen and (min-width: 1200px) {
 
     body {
-        margin-right: 4rem;
-        grid-template-columns: 20rem auto;
+        grid-template-columns: 20rem 1fr;
     }
 
     .task-options {
